syntax = "proto3";

option csharp_namespace = "Server";

import "google/protobuf/timestamp.proto";

package Validate;

service Validate {
  rpc Validate (DataRequest) returns (DataReply);
}

message Fullname {
  string name = 1;
  string surname = 2;
  string patronymic = 3;
}

message DataRequest {
  Fullname fullname = 1;
  repeated string telephoneNumbers = 2;
  repeated string emails = 3;
  repeated string addresses = 4;
  string passport = 5;
  google.protobuf.Timestamp birthDate = 6;
}

message DataReply {
  FullnameReply fullname = 1;
  repeated ValidateString telephoneNumbers = 2;
  repeated ValidateString emails = 3;
  repeated ValidateString addresses = 4;
  ValidateString passport = 5;
  ValidateTimestamp birthDate = 6;
}

message FullnameReply {
  ValidateString name = 1;
  ValidateString surname = 2;
  ValidateString patronymic = 3;
}

message ValidateString{
  string Value = 1;
  bool IsValid = 2;
  optional string comment = 3;
}

message ValidateTimestamp{
  google.protobuf.Timestamp Value = 1;
  bool IsValid = 2;
  optional string comment = 3;
}